@@ -1,7 +1,7 @@
-MD5 acdb4693e22d1c713b4119b7ee8154fc ciphire-mail-1.0.0.ebuild 3514
-MD5 9a282ac56f8820aee17df221d3e05005 ciphire-mail-1.1.009.ebuild 4399
-MD5 738abadba1b2b29bb9015f5b2c54dfba ciphire-mail-1.1.015.ebuild 4517
-MD5 077cf1a66dde984a3f1b8b524f9182f3 ChangeLog 1308
+MD5 d710cca36c76de67d0211c50a68dbf47 ciphire-mail-1.0.0.ebuild 3513
+MD5 19d647af343b228a902e742526077e14 ciphire-mail-1.1.009.ebuild 4398
+MD5 86d52dce80b00490e91fb27c1f319c15 ciphire-mail-1.1.015.ebuild 4516
+MD5 a147b435b37f1d43d8983f0ddfc4633a ChangeLog 1474
 MD5 b612d343db3c54560665171eb7db245c metadata.xml 223
 MD5 3ba822caed60cb1af266084b7298fe80 files/digest-ciphire-mail-1.0.0 83
 MD5 bc3695b7104bb878d3e496ad4f7d6e10 files/digest-ciphire-mail-1.1.009 147
